add my information to style file

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*!
 Theme Name: The SpaceX Missions Theme
 Theme URI: http://underscores.me/
-Author: Underscores.me
-Author URI: http://underscores.me/
-Description: Description
+Author: Mahdi Dastmard
+Author URI: mailto:Dastmardmahdi@gmail.com
+Description: This WP theme just u:fynd web challenge by Mahdi Dastmard.
 Version: 1.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
