--- a/style.css
+++ b/style.css
@@ -71,6 +71,141 @@ html {
 	-webkit-text-size-adjust: 100%;
 }
 
+/**
+ * fonts
+
+ */
+ /* open-sans-300 - latin */
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 300;
+	src: url('assets/fonts/open-sans-v18-latin-300.eot'); /* IE9 Compat Modes */
+	src: local(''),
+		 url('assets/fonts/open-sans-v18-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		 url('assets/fonts/open-sans-v18-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-300.woff') format('woff'), /* Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+		 url('assets/fonts/open-sans-v18-latin-300.svg#OpenSans') format('svg'); /* Legacy iOS */
+  }
+  /* open-sans-300italic - latin */
+  @font-face {
+	font-family: 'Open Sans';
+	font-style: italic;
+	font-weight: 300;
+	src: url('assets/fonts/open-sans-v18-latin-300italic.eot'); /* IE9 Compat Modes */
+	src: local(''),
+		 url('assets/fonts/open-sans-v18-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		 url('assets/fonts/open-sans-v18-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-300italic.woff') format('woff'), /* Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
+		 url('assets/fonts/open-sans-v18-latin-300italic.svg#OpenSans') format('svg'); /* Legacy iOS */
+  }
+  /* open-sans-regular - latin */
+  @font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 400;
+	src: url('assets/fonts/open-sans-v18-latin-regular.eot'); /* IE9 Compat Modes */
+	src: local(''),
+		 url('assets/fonts/open-sans-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		 url('assets/fonts/open-sans-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+		 url('assets/fonts/open-sans-v18-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
+  }
+  /* open-sans-italic - latin */
+  @font-face {
+	font-family: 'Open Sans';
+	font-style: italic;
+	font-weight: 400;
+	src: url('assets/fonts/open-sans-v18-latin-italic.eot'); /* IE9 Compat Modes */
+	src: local(''),
+		 url('assets/fonts/open-sans-v18-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		 url('assets/fonts/open-sans-v18-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-italic.woff') format('woff'), /* Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+		 url('assets/fonts/open-sans-v18-latin-italic.svg#OpenSans') format('svg'); /* Legacy iOS */
+  }
+  /* open-sans-600 - latin */
+  @font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 600;
+	src: url('assets/fonts/open-sans-v18-latin-600.eot'); /* IE9 Compat Modes */
+	src: local(''),
+		 url('assets/fonts/open-sans-v18-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		 url('assets/fonts/open-sans-v18-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-600.woff') format('woff'), /* Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+		 url('assets/fonts/open-sans-v18-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
+  }
+  /* open-sans-600italic - latin */
+  @font-face {
+	font-family: 'Open Sans';
+	font-style: italic;
+	font-weight: 600;
+	src: url('assets/fonts/open-sans-v18-latin-600italic.eot'); /* IE9 Compat Modes */
+	src: local(''),
+		 url('assets/fonts/open-sans-v18-latin-600italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		 url('assets/fonts/open-sans-v18-latin-600italic.woff2') format('woff2'), /* Super Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-600italic.woff') format('woff'), /* Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-600italic.ttf') format('truetype'), /* Safari, Android, iOS */
+		 url('assets/fonts/open-sans-v18-latin-600italic.svg#OpenSans') format('svg'); /* Legacy iOS */
+  }
+  /* open-sans-700 - latin */
+  @font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 700;
+	src: url('assets/fonts/open-sans-v18-latin-700.eot'); /* IE9 Compat Modes */
+	src: local(''),
+		 url('assets/fonts/open-sans-v18-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		 url('assets/fonts/open-sans-v18-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-700.woff') format('woff'), /* Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+		 url('assets/fonts/open-sans-v18-latin-700.svg#OpenSans') format('svg'); /* Legacy iOS */
+  }
+  /* open-sans-700italic - latin */
+  @font-face {
+	font-family: 'Open Sans';
+	font-style: italic;
+	font-weight: 700;
+	src: url('assets/fonts/open-sans-v18-latin-700italic.eot'); /* IE9 Compat Modes */
+	src: local(''),
+		 url('assets/fonts/open-sans-v18-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		 url('assets/fonts/open-sans-v18-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-700italic.woff') format('woff'), /* Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
+		 url('assets/fonts/open-sans-v18-latin-700italic.svg#OpenSans') format('svg'); /* Legacy iOS */
+  }
+  /* open-sans-800 - latin */
+  @font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 800;
+	src: url('assets/fonts/open-sans-v18-latin-800.eot'); /* IE9 Compat Modes */
+	src: local(''),
+		 url('assets/fonts/open-sans-v18-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		 url('assets/fonts/open-sans-v18-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-800.woff') format('woff'), /* Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
+		 url('assets/fonts/open-sans-v18-latin-800.svg#OpenSans') format('svg'); /* Legacy iOS */
+  }
+  /* open-sans-800italic - latin */
+  @font-face {
+	font-family: 'Open Sans';
+	font-style: italic;
+	font-weight: 800;
+	src: url('assets/fonts/open-sans-v18-latin-800italic.eot'); /* IE9 Compat Modes */
+	src: local(''),
+		 url('assets/fonts/open-sans-v18-latin-800italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		 url('assets/fonts/open-sans-v18-latin-800italic.woff2') format('woff2'), /* Super Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-800italic.woff') format('woff'), /* Modern Browsers */
+		 url('assets/fonts/open-sans-v18-latin-800italic.ttf') format('truetype'), /* Safari, Android, iOS */
+		 url('assets/fonts/open-sans-v18-latin-800italic.svg#OpenSans') format('svg'); /* Legacy iOS */
+  }
+
 /* Sections
 	 ========================================================================== */
 
@@ -115,7 +250,7 @@ hr {
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 pre {
-	font-family: monospace, monospace;
+	font-family: 'Open Sans', monospace;
 	font-size: 1em;
 }
 
@@ -164,6 +299,7 @@ samp {
 small {
 	font-size: 80%;
 }
+
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
@@ -403,7 +539,7 @@ select,
 optgroup,
 textarea {
 	color: #404040;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: 'Open Sans',tahoma;
 	font-size: 1rem;
 	line-height: 1.5;
 }
@@ -966,4 +1102,16 @@ textarea {
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 1.5em;
+}
+
+
+
+
+/* Theme main style
+--------------------------------------------- */
+
+.container {
+	width: 1170px;
+	margin: auto;
+	display: flex;
 }
