--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,30 +99,38 @@ body {
     width: 1170px;
     margin: auto;
     display: block; }
-  body header #primary-menu ul {
-    display: flex;
-    list-style: none;
-    flex-direction: row;
-    padding: 0;
-    margin: 0; }
-    body header #primary-menu ul li {
-      padding: 5px 15px;
-      margin: 5px;
-      border-radius: 5px;
-      background: #00bd94; }
-      body header #primary-menu ul li:first-of-type {
-        margin-left: 0; }
-      body header #primary-menu ul li a {
+  body header {
+    margin-top: 10px; }
+    body header #primary-menu ul {
+      display: flex;
+      list-style: none;
+      flex-direction: row;
+      padding: 0;
+      margin: 0; }
+      body header #primary-menu ul li {
+        padding: 5px 15px;
+        margin: 5px;
+        border-radius: 5px;
+        background: #00bd94; }
+        body header #primary-menu ul li:first-of-type {
+          margin-left: 0; }
+        body header #primary-menu ul li a {
+          color: #fff; }
+    body header .site-branding {
+      border-radius: 10px;
+      background: #0F2027;
+      background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
+      background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+      text-align: center;
+      padding: 10px; }
+      body header .site-branding * {
         color: #fff; }
-  body header .site-branding {
-    border-radius: 10px;
-    background: #0F2027;
-    background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
-    background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
-    text-align: center;
-    padding: 10px; }
-    body header .site-branding * {
-      color: #fff; }
+  body main#primary {
+    background: #fcfcfc;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #e3e3e3;
+    margin-bottom: 10px; }
   body .site-info {
     background: #ccc;
     padding: 10px;
