--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -145,6 +145,8 @@ body
 
     // ------- Header ------- // 
     header 
+        margin-top: 10px
+
         #primary-menu 
             ul
                 display: flex
@@ -152,6 +154,7 @@ body
                 flex-direction: row
                 padding: 0
                 margin: 0
+
                 li
                     padding: 5px 15px
                     margin: 5px
@@ -170,6 +173,14 @@ body
             padding: 10px
             * 
                 color: #fff
+    // ------- Main content ------- //     
+    main#primary
+        background: #fcfcfc
+        padding: 5px
+        border-radius: 5px
+        border: 1px solid #e3e3e3
+        margin-bottom: 10px
+    
     // ------- Footer ------- //     
     .site-info 
         background: #ccc
