--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -140,7 +140,9 @@ body
         width: 1170px
         margin: auto
         display: block
-
+    .row
+        display: flex
+        flex-wrap: wrap
 
 
     // ------- Header ------- // 
