--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,9 +134,9 @@ body {
           color: #fff; }
     body header .site-branding {
       border-radius: 10px;
-      background: #0F2027;
-      background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
-      background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+      background: #3a6186;
+      background: -webkit-linear-gradient(to right, #89253e, #3a6186);
+      background: linear-gradient(to right, #89253e, #3a6186);
       text-align: center;
       padding: 10px; }
       body header .site-branding * {
@@ -147,6 +147,12 @@ body {
     border-radius: 5px;
     border: 1px solid #e3e3e3;
     margin-bottom: 10px; }
+  body .entry-title {
+    background: #294c5b;
+    color: #fff;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px; }
   body .site-info {
     background: #ccc;
     padding: 10px;
@@ -158,7 +164,7 @@ body {
     margin: 5px;
     background: #fff;
     padding: 15px;
-    box-shadow: 0 0 17px 4px #ccc;
+    box-shadow: 0 0 17px 4px #e5e5e5;
     border-radius: 2px;
     height: 180px; }
     body .history-mission h2 {
