--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -232,3 +232,31 @@ body
             padding: 1px
             border-radius: 2px
             font-size: 12px
+    // ------- Lunches Page ------- // 
+
+    .lunch
+        margin: 5px
+        background: #fff
+        padding: 15px
+        box-shadow: 0 0 17px 4px #e5e5e5
+        border-radius: 2px
+        height: 180px
+        h3 
+            margin-bottom: 0
+            margin-top: 5px
+            font-size: 14px
+            a
+              color: #741267
+              text-decoration: none
+        p 
+            height: 60px
+            overflow-y: auto
+            ::-webkit-scrollbar-button
+                display: none
+        .date, .time
+            background: #ccc
+            color: #6a6a6abb
+            margin-right: 5px
+            padding: 1px
+            border-radius: 2px
+            font-size: 12px
