--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -3,10 +3,10 @@
   font-family: 'Open Sans'
   font-style: normal
   font-weight: 300
-  src: url('assets/fonts/open-sans-v18-latin-300.eot')
+  src: url('../fonts/open-sans-v18-latin-300.eot')
 
   /* IE9 Compat Modes
-  src: local(""), url('assets/fonts/open-sans-v18-latin-300.eot?#iefix') format("embedded-opentype"), url('assets/fonts/open-sans-v18-latin-300.woff2') format("woff2"), url('assets/fonts/open-sans-v18-latin-300.woff') format("woff"), url('assets/fonts/open-sans-v18-latin-300.ttf') format("truetype"), url('assets/fonts/open-sans-v18-latin-300.svg#OpenSans') format("svg")
+  src: local(""), url('../fonts/open-sans-v18-latin-300.eot?#iefix') format("embedded-opentype"), url('../fonts/open-sans-v18-latin-300.woff2') format("woff2"), url('../fonts/open-sans-v18-latin-300.woff') format("woff"), url('../fonts/open-sans-v18-latin-300.ttf') format("truetype"), url('../fonts/open-sans-v18-latin-300.svg#OpenSans') format("svg")
 
   /* Legacy iOS
 
@@ -15,10 +15,10 @@
   font-family: 'Open Sans'
   font-style: italic
   font-weight: 300
-  src: url('assets/fonts/open-sans-v18-latin-300italic.eot')
+  src: url('../fonts/open-sans-v18-latin-300italic.eot')
 
   /* IE9 Compat Modes
-  src: local(""), url('assets/fonts/open-sans-v18-latin-300italic.eot?#iefix') format("embedded-opentype"), url('assets/fonts/open-sans-v18-latin-300italic.woff2') format("woff2"), url('assets/fonts/open-sans-v18-latin-300italic.woff') format("woff"), url('assets/fonts/open-sans-v18-latin-300italic.ttf') format("truetype"), url('assets/fonts/open-sans-v18-latin-300italic.svg#OpenSans') format("svg")
+  src: local(""), url('../fonts/open-sans-v18-latin-300italic.eot?#iefix') format("embedded-opentype"), url('../fonts/open-sans-v18-latin-300italic.woff2') format("woff2"), url('../fonts/open-sans-v18-latin-300italic.woff') format("woff"), url('../fonts/open-sans-v18-latin-300italic.ttf') format("truetype"), url('../fonts/open-sans-v18-latin-300italic.svg#OpenSans') format("svg")
 
   /* Legacy iOS
 
@@ -27,10 +27,10 @@
   font-family: 'Open Sans'
   font-style: normal
   font-weight: 400
-  src: url('assets/fonts/open-sans-v18-latin-regular.eot')
+  src: url('../fonts/open-sans-v18-latin-regular.eot')
 
   /* IE9 Compat Modes
-  src: local(""), url('assets/fonts/open-sans-v18-latin-regular.eot?#iefix') format("embedded-opentype"), url('assets/fonts/open-sans-v18-latin-regular.woff2') format("woff2"), url('assets/fonts/open-sans-v18-latin-regular.woff') format("woff"), url('assets/fonts/open-sans-v18-latin-regular.ttf') format("truetype"), url('assets/fonts/open-sans-v18-latin-regular.svg#OpenSans') format("svg")
+  src: local(""), url('../fonts/open-sans-v18-latin-regular.eot?#iefix') format("embedded-opentype"), url('../fonts/open-sans-v18-latin-regular.woff2') format("woff2"), url('../fonts/open-sans-v18-latin-regular.woff') format("woff"), url('../fonts/open-sans-v18-latin-regular.ttf') format("truetype"), url('../fonts/open-sans-v18-latin-regular.svg#OpenSans') format("svg")
 
   /* Legacy iOS
 
@@ -39,10 +39,10 @@
   font-family: 'Open Sans'
   font-style: italic
   font-weight: 400
-  src: url('assets/fonts/open-sans-v18-latin-italic.eot')
+  src: url('../fonts/open-sans-v18-latin-italic.eot')
 
   /* IE9 Compat Modes
-  src: local(""), url('assets/fonts/open-sans-v18-latin-italic.eot?#iefix') format("embedded-opentype"), url('assets/fonts/open-sans-v18-latin-italic.woff2') format("woff2"), url('assets/fonts/open-sans-v18-latin-italic.woff') format("woff"), url('assets/fonts/open-sans-v18-latin-italic.ttf') format("truetype"), url('assets/fonts/open-sans-v18-latin-italic.svg#OpenSans') format("svg")
+  src: local(""), url('../fonts/open-sans-v18-latin-italic.eot?#iefix') format("embedded-opentype"), url('../fonts/open-sans-v18-latin-italic.woff2') format("woff2"), url('../fonts/open-sans-v18-latin-italic.woff') format("woff"), url('../fonts/open-sans-v18-latin-italic.ttf') format("truetype"), url('../fonts/open-sans-v18-latin-italic.svg#OpenSans') format("svg")
 
   /* Legacy iOS
 
@@ -51,10 +51,10 @@
   font-family: 'Open Sans'
   font-style: normal
   font-weight: 600
-  src: url('assets/fonts/open-sans-v18-latin-600.eot')
+  src: url('../fonts/open-sans-v18-latin-600.eot')
 
   /* IE9 Compat Modes
-  src: local(""), url('assets/fonts/open-sans-v18-latin-600.eot?#iefix') format("embedded-opentype"), url('assets/fonts/open-sans-v18-latin-600.woff2') format("woff2"), url('assets/fonts/open-sans-v18-latin-600.woff') format("woff"), url('assets/fonts/open-sans-v18-latin-600.ttf') format("truetype"), url('assets/fonts/open-sans-v18-latin-600.svg#OpenSans') format("svg")
+  src: local(""), url('../fonts/open-sans-v18-latin-600.eot?#iefix') format("embedded-opentype"), url('../fonts/open-sans-v18-latin-600.woff2') format("woff2"), url('../fonts/open-sans-v18-latin-600.woff') format("woff"), url('../fonts/open-sans-v18-latin-600.ttf') format("truetype"), url('../fonts/open-sans-v18-latin-600.svg#OpenSans') format("svg")
 
   /* Legacy iOS
 
@@ -63,10 +63,10 @@
   font-family: 'Open Sans'
   font-style: italic
   font-weight: 600
-  src: url('assets/fonts/open-sans-v18-latin-600italic.eot')
+  src: url('../fonts/open-sans-v18-latin-600italic.eot')
 
   /* IE9 Compat Modes
-  src: local(""), url('assets/fonts/open-sans-v18-latin-600italic.eot?#iefix') format("embedded-opentype"), url('assets/fonts/open-sans-v18-latin-600italic.woff2') format("woff2"), url('assets/fonts/open-sans-v18-latin-600italic.woff') format("woff"), url('assets/fonts/open-sans-v18-latin-600italic.ttf') format("truetype"), url('assets/fonts/open-sans-v18-latin-600italic.svg#OpenSans') format("svg")
+  src: local(""), url('../fonts/open-sans-v18-latin-600italic.eot?#iefix') format("embedded-opentype"), url('../fonts/open-sans-v18-latin-600italic.woff2') format("woff2"), url('../fonts/open-sans-v18-latin-600italic.woff') format("woff"), url('../fonts/open-sans-v18-latin-600italic.ttf') format("truetype"), url('../fonts/open-sans-v18-latin-600italic.svg#OpenSans') format("svg")
 
   /* Legacy iOS
 
@@ -75,10 +75,10 @@
   font-family: 'Open Sans'
   font-style: normal
   font-weight: 700
-  src: url('assets/fonts/open-sans-v18-latin-700.eot')
+  src: url('../fonts/open-sans-v18-latin-700.eot')
 
   /* IE9 Compat Modes
-  src: local(""), url('assets/fonts/open-sans-v18-latin-700.eot?#iefix') format("embedded-opentype"), url('assets/fonts/open-sans-v18-latin-700.woff2') format("woff2"), url('assets/fonts/open-sans-v18-latin-700.woff') format("woff"), url('assets/fonts/open-sans-v18-latin-700.ttf') format("truetype"), url('assets/fonts/open-sans-v18-latin-700.svg#OpenSans') format("svg")
+  src: local(""), url('../fonts/open-sans-v18-latin-700.eot?#iefix') format("embedded-opentype"), url('../fonts/open-sans-v18-latin-700.woff2') format("woff2"), url('../fonts/open-sans-v18-latin-700.woff') format("woff"), url('../fonts/open-sans-v18-latin-700.ttf') format("truetype"), url('../fonts/open-sans-v18-latin-700.svg#OpenSans') format("svg")
 
   /* Legacy iOS
 
@@ -87,10 +87,10 @@
   font-family: 'Open Sans'
   font-style: italic
   font-weight: 700
-  src: url('assets/fonts/open-sans-v18-latin-700italic.eot')
+  src: url('../fonts/open-sans-v18-latin-700italic.eot')
 
   /* IE9 Compat Modes
-  src: local(""), url('assets/fonts/open-sans-v18-latin-700italic.eot?#iefix') format("embedded-opentype"), url('assets/fonts/open-sans-v18-latin-700italic.woff2') format("woff2"), url('assets/fonts/open-sans-v18-latin-700italic.woff') format("woff"), url('assets/fonts/open-sans-v18-latin-700italic.ttf') format("truetype"), url('assets/fonts/open-sans-v18-latin-700italic.svg#OpenSans') format("svg")
+  src: local(""), url('../fonts/open-sans-v18-latin-700italic.eot?#iefix') format("embedded-opentype"), url('../fonts/open-sans-v18-latin-700italic.woff2') format("woff2"), url('../fonts/open-sans-v18-latin-700italic.woff') format("woff"), url('../fonts/open-sans-v18-latin-700italic.ttf') format("truetype"), url('../fonts/open-sans-v18-latin-700italic.svg#OpenSans') format("svg")
 
   /* Legacy iOS
 
@@ -99,10 +99,10 @@
   font-family: 'Open Sans'
   font-style: normal
   font-weight: 800
-  src: url('assets/fonts/open-sans-v18-latin-800.eot')
+  src: url('../fonts/open-sans-v18-latin-800.eot')
 
   /* IE9 Compat Modes
-  src: local(""), url('assets/fonts/open-sans-v18-latin-800.eot?#iefix') format("embedded-opentype"), url('assets/fonts/open-sans-v18-latin-800.woff2') format("woff2"), url('assets/fonts/open-sans-v18-latin-800.woff') format("woff"), url('assets/fonts/open-sans-v18-latin-800.ttf') format("truetype"), url('assets/fonts/open-sans-v18-latin-800.svg#OpenSans') format("svg")
+  src: local(""), url('../fonts/open-sans-v18-latin-800.eot?#iefix') format("embedded-opentype"), url('../fonts/open-sans-v18-latin-800.woff2') format("woff2"), url('../fonts/open-sans-v18-latin-800.woff') format("woff"), url('../fonts/open-sans-v18-latin-800.ttf') format("truetype"), url('../fonts/open-sans-v18-latin-800.svg#OpenSans') format("svg")
 
   /* Legacy iOS
 
@@ -111,10 +111,10 @@
   font-family: 'Open Sans'
   font-style: italic
   font-weight: 800
-  src: url('assets/fonts/open-sans-v18-latin-800italic.eot')
+  src: url('../fonts/open-sans-v18-latin-800italic.eot')
 
   /* IE9 Compat Modes
-  src: local(""), url('assets/fonts/open-sans-v18-latin-800italic.eot?#iefix') format("embedded-opentype"), url('assets/fonts/open-sans-v18-latin-800italic.woff2') format("woff2"), url('assets/fonts/open-sans-v18-latin-800italic.woff') format("woff"), url('assets/fonts/open-sans-v18-latin-800italic.ttf') format("truetype"), url('assets/fonts/open-sans-v18-latin-800italic.svg#OpenSans') format("svg")
+  src: local(""), url('../fonts/open-sans-v18-latin-800italic.eot?#iefix') format("embedded-opentype"), url('../fonts/open-sans-v18-latin-800italic.woff2') format("woff2"), url('../fonts/open-sans-v18-latin-800italic.woff') format("woff"), url('../fonts/open-sans-v18-latin-800italic.ttf') format("truetype"), url('../fonts/open-sans-v18-latin-800italic.svg#OpenSans') format("svg")
 // ------- fonts ------- //
 
 // ### Index of stylesheet:
@@ -143,6 +143,7 @@ body
     .container
         width: 1170px
         margin: auto
+        max-width: 100%
         display: block
     .row
         display: flex
@@ -246,17 +247,27 @@ body
             margin-top: 5px
             font-size: 14px
             a
-              color: #741267
+              color: #076a6d
               text-decoration: none
+        span 
+          margin-right: 5px
+          padding: 3px
+          border-radius: 2px
+          font-size: 12px
+        .tdate 
+          background: #ccc
+          color: #888
+        .nationality
+          background: #dadfc1
+          color: #616e21
+        .more 
+          font-size: 13px
+          margin-top: 10px
         p 
-            height: 60px
-            overflow-y: auto
-            ::-webkit-scrollbar-button
-                display: none
-        .date, .time
-            background: #ccc
-            color: #6a6a6abb
-            margin-right: 5px
-            padding: 1px
-            border-radius: 2px
-            font-size: 12px
+          font-size: 12px
+          height: 70px
+          overflow-y: auto
+          ::-webkit-scrollbar-button
+            display: none
+
+          
